--- a/package.json
+++ b/package.json
@@ -45,8 +45,15 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.11.0",
     "@babel/core": "^7.26.0",
+    "@eslint-react/eslint-plugin": "^1.37.3",
     "@types/react": "~18.3.12",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-readable-tailwind": "^2.0.0",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "typescript": "^5.3.3"
   },
   "private": true
