--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "click-tasks-rn",
-  "main": "index.js",
   "version": "1.0.0",
+  "private": true,
+  "main": "index.js",
   "scripts": {
     "dev": "expo start -c",
     "dev:web": "expo start -c --web",
@@ -55,6 +56,5 @@
     "eslint-plugin-readable-tailwind": "^2.0.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "typescript": "^5.3.3"
-  },
-  "private": true
+  }
 }
