--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.1.0",
+    "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/navigation-menu": "^1.1.0",
     "@rn-primitives/portal": "~1.1.0",
     "@rn-primitives/progress": "~1.1.0",
@@ -26,6 +27,7 @@
     "@rn-primitives/types": "~1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.25",
     "expo-linking": "~7.0.4",
     "expo-navigation-bar": "~4.0.7",
