--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.1.0",
+    "@rn-primitives/dropdown-menu": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/navigation-menu": "^1.1.0",
     "@rn-primitives/portal": "~1.1.0",
@@ -31,16 +32,19 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.25",
     "expo-linking": "~7.0.4",
+    "expo-localization": "^16.0.1",
     "expo-navigation-bar": "~4.0.7",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
+    "i18next": "^24.2.3",
     "lucide-nativewind": "^0.483.0",
     "lucide-react-native": "^0.378.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
@@ -59,6 +63,7 @@
     "@eslint-react/eslint-plugin": "^1.37.3",
     "@types/react": "~18.3.12",
     "eslint": "^9.23.0",
+    "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-readable-tailwind": "^2.0.0",
