--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/native": "^7.0.0",
+    "@realm/react": "^0.11.0",
     "@rn-primitives/avatar": "~1.1.0",
     "@rn-primitives/dropdown-menu": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
@@ -44,17 +47,21 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.8",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
+    "realm": "^12.14.1",
     "remeda": "^2.21.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -69,5 +76,10 @@
     "eslint-plugin-readable-tailwind": "^2.0.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "typescript": "^5.3.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "realm"
+    ]
   }
 }
