--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@realm/react": "^0.11.0",
     "@rn-primitives/avatar": "~1.1.0",
     "@rn-primitives/dropdown-menu": "^1.1.0",
+    "@rn-primitives/hooks": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/navigation-menu": "^1.1.0",
     "@rn-primitives/portal": "~1.1.0",
     "@rn-primitives/progress": "~1.1.0",
+    "@rn-primitives/separator": "^1.1.0",
     "@rn-primitives/slot": "~1.1.0",
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
