chore: configure notifee

--- a/app.json
+++ b/app.json
@@ -34,7 +34,20 @@
     },
     "plugins": [
       "expo-router",
-      "expo-localization"
+      "expo-localization",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 35, // at least 35
+            "targetSdkVersion": 33, // Only needed if requesting permission on Android 13 via requestPermission, at least 33
+
+            "extraMavenRepos": [
+              "../../node_modules/@notifee/react-native/android/libs"
+            ]
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
