--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/native": "^7.0.0",
     "@realm/react": "^0.11.0",
@@ -36,6 +37,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "expo": "^52.0.42",
+    "expo-build-properties": "~0.13.2",
     "expo-linking": "~7.0.4",
     "expo-localization": "^16.0.1",
     "expo-navigation-bar": "~4.0.9",
