--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.0.0",
     "@realm/react": "^0.11.0",
     "@rn-primitives/avatar": "~1.1.0",
+    "@rn-primitives/checkbox": "^1.1.0",
     "@rn-primitives/dropdown-menu": "^1.1.0",
     "@rn-primitives/hooks": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
