--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@notifee/react-native": "^9.1.8",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/drawer": "^7.3.8",
     "@react-navigation/native": "^7.0.0",
     "@realm/react": "^0.11.0",
     "@rn-primitives/avatar": "~1.1.0",
@@ -55,8 +56,9 @@
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.8",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "15.8.0",
