--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rn-primitives/hooks": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/navigation-menu": "^1.1.0",
+    "@rn-primitives/popover": "^1.1.0",
     "@rn-primitives/portal": "~1.1.0",
     "@rn-primitives/progress": "~1.1.0",
     "@rn-primitives/separator": "^1.1.0",
