--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native": "0.76.8",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
