--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@babel/core": "^7.26.0",
     "@eslint-react/eslint-plugin": "^1.37.3",
     "@types/react": "~18.3.12",
+    "chokidar": "^4.0.3",
     "eslint": "^9.23.0",
     "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -85,6 +86,7 @@
     "eslint-plugin-readable-tailwind": "^2.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
+    "js-yaml": "^4.1.0",
     "typescript": "^5.3.3"
   },
   "pnpm": {
