chore: add locale script to package json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "clean": "rm -rf .expo node_modules",
     "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "locales": "node ./locales.build.cjs",
+    "dev:locales": "node ./locales.build.cjs --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
