--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
     "@types/react": "~18.3.12",
     "chokidar": "^4.0.3",
     "eslint": "^9.23.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i18next": "^6.1.1",
+    "eslint-plugin-no-autofix": "^2.1.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-readable-tailwind": "^2.0.0",
