--- a/app.json
+++ b/app.json
@@ -35,19 +35,21 @@
     "plugins": [
       "expo-router",
       "expo-localization",
-      [
-        "expo-build-properties",
-        {
-          "android": {
-            "compileSdkVersion": 35, // at least 35
-            "targetSdkVersion": 33, // Only needed if requesting permission on Android 13 via requestPermission, at least 33
+      ["expo-build-properties", {
+        "android": {
+          "compileSdkVersion": 35, // at least 35
+          "targetSdkVersion": 33, // Only needed if requesting permission on Android 13 via requestPermission, at least 33
 
-            "extraMavenRepos": [
-              "../../node_modules/@notifee/react-native/android/libs"
-            ]
-          }
+          "extraMavenRepos": [
+            "../../node_modules/@notifee/react-native/android/libs"
+          ]
         }
-      ]
+      }
+      ],
+      ["@react-native-voice/voice", {
+        "microphonePermission": "CUSTOM: Allow $(PRODUCT_NAME) to access the microphone",
+        "speechRecognitionPermission": "CUSTOM: Allow $(PRODUCT_NAME) to securely recognize user speech"
+      }]
     ],
     "experiments": {
       "typedRoutes": true
