--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@notifee/react-native": "^9.1.8",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-voice/voice": "github:bonesyblue/react-native-voice#55a58924534e168d26c9da17db43eecc983630fc",
     "@react-navigation/drawer": "^7.3.8",
     "@react-navigation/native": "^7.0.0",
     "@realm/react": "^0.11.0",
@@ -39,6 +40,7 @@
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
     "@shopify/flash-list": "^1.7.3",
+    "ahooks": "^3.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
