--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
+    "web-streams-polyfill": "^4.1.0",
     "zod": "^3.24.2",
     "zustand": "^4.4.7"
   },
