--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@rn-primitives/progress": "~1.1.0",
     "@rn-primitives/separator": "^1.1.0",
     "@rn-primitives/slot": "~1.1.0",
+    "@rn-primitives/table": "^1.1.0",
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
     "@shopify/flash-list": "^1.7.3",
+    "@tanstack/react-table": "^8.21.3",
     "ahooks": "^3.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
