--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
     "@shopify/flash-list": "^1.7.3",
+    "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-table": "^8.21.3",
     "ahooks": "^3.8.4",
     "class-variance-authority": "^0.7.0",
@@ -87,6 +88,7 @@
     "@antfu/eslint-config": "^4.11.0",
     "@babel/core": "^7.26.0",
     "@eslint-react/eslint-plugin": "^1.37.3",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
     "@types/react": "~18.3.12",
     "chokidar": "^4.0.3",
     "eslint": "^9.23.0",
