--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@rn-primitives/progress": "~1.1.0",
     "@rn-primitives/separator": "^1.1.0",
     "@rn-primitives/slot": "~1.1.0",
+    "@rn-primitives/switch": "^1.1.0",
     "@rn-primitives/table": "^1.1.0",
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
