feat: add 1day/3day view switch

--- a/locales-src/en-US.yaml
+++ b/locales-src/en-US.yaml
@@ -79,6 +79,10 @@ calendar_strip:
     expanded: Collaspe Calendar
 
 timetable:
+  mode:
+    day: 1 Day View
+    3day: 3 Day View
+
   task:
     label: >
       {{ summary }},
