feat(summary): improve display

--- a/locales-src/en-US.yaml
+++ b/locales-src/en-US.yaml
@@ -126,6 +126,8 @@ expenses_view:
 prod_summary:
   currency:
     label: Choose the currency to summarize...
+  comments:
+    title: Recommendations for you...
 
 countdown_view:
   days_left: <1>{{ count }}</1> days left
