feat: unify due and plannedBegin

--- a/locales-src/en-US.yaml
+++ b/locales-src/en-US.yaml
@@ -14,6 +14,10 @@ voice_button:
   accept: Accept
 
 task_form:
+  tab:
+    activity: Activity
+    task: Task
+
   summary:
     label: Task Summary
     placeholder: Enter task summary
