--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@rn-primitives/slot": "~1.1.0",
     "@rn-primitives/switch": "^1.1.0",
     "@rn-primitives/table": "^1.1.0",
+    "@rn-primitives/tabs": "^1.1.0",
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
     "@shopify/flash-list": "^1.7.3",
