feat: basic alarm v2

--- a/locales-src/en-US.yaml
+++ b/locales-src/en-US.yaml
@@ -41,6 +41,15 @@ task_form:
     label: Add Item to Dashboard Countdown
     error:
       no_due: Due date must be defined when adding to countdown
+  alarm:
+    label: Alarm
+    values:
+      none: No Alarm
+      minutes: '{{ count }} min'
+
+alarm:
+  notification:
+    minutesLeft: '{{ minutes }} minutes left'
 
 txn_account_form:
   name:
@@ -196,3 +205,9 @@ preference:
 
   prefered_currency:
     label: Prefered Currency (3 Characters)
+
+  alarm_type:
+    label: Alarm Type
+    values:
+      once: Once
+      repeat: Repeat
