--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.42",
     "expo-build-properties": "~0.13.2",
+    "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
     "expo-localization": "^16.0.1",
     "expo-navigation-bar": "~4.0.9",
     "expo-router": "~4.0.16",
+    "expo-sensors": "~14.0.2",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
