feat(txn): basic cateogry

--- a/locales-src/en-US.yaml
+++ b/locales-src/en-US.yaml
@@ -68,6 +68,8 @@ txn_form:
     label: Transaction Date
   summary:
     label: Summary
+  cat:
+    label: Category
 
 calendar_day:
   taskCount: '{{ count }} task pending.'
