--- a/locales-src/en-US.yaml
+++ b/locales-src/en-US.yaml
@@ -7,6 +7,9 @@ select:
   prevOption: Previous Option
   nextOption: Next Option
 
+data_table:
+  placeholder: No items.
+
 voice_button:
   label: Create Tasks by Voice
   title: Please speak now...
