--- a/locales-src/en-US.yaml
+++ b/locales-src/en-US.yaml
@@ -174,6 +174,9 @@ routes:
     edit: Edit Transaction Account
     create: Create Transaction Account
 
+  txn-cat:
+    list: Edit Categories
+
   recognize: Voice Recognize
 
   prod-summary:
@@ -217,3 +220,18 @@ preference:
     values:
       once: Once
       repeat: Repeat
+
+txn_cat:
+  icon:
+    label: Icon
+  name:
+    label: Category
+  color:
+    label: Color
+
+  delete:
+    label: Delete Category
+
+  new_cat:
+    label: Create a new Category
+    name: New Category
