--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@babel/core": "^7.26.0",
     "@eslint-react/eslint-plugin": "^1.37.3",
     "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "chokidar": "^4.0.3",
     "eslint": "^9.23.0",
@@ -105,6 +106,7 @@
     "eslint-plugin-readable-tailwind": "^2.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "typescript": "^5.3.3"
   },
